Here is an overview of changes for each releases:

2007-09-11, nl_carnage:
- Added rudimentary keyboard support for I18nPage: ENTER (+Shift) goes to the next (previous) key,
  TAB (+Shift) goes to the next (previous) BundleEntryComposite
- Added selection synchronisation between source editors and bundle editor.
- Added basic undo/redo functionality for BundleEntryEditors by changing the widget used from swt.Text to jface.TextViewer.

2007-09-11, fleque:
- Creating a new locale is now done without closing the editor
- Actions in tree context menu now added by menu manager and enable/disable depending on tree selection

Release 0.7.7 (2007-02-06)
--------------------------
- Fix: Upon saving, the last tree selection is kept (the tree is otherwise
  redrawn, which is something to be fixed in a future release).
- Fix: Deleting a key now updates the tree properly.

Release 0.7.6 (2007-02-04)
--------------------------
- New: Chinese plugin translation added.
- New (feature #1333822): Added Preferences option not to save empty keys
  (now default behaviour).
- New: Outline view of keys.
- New: Option to hide key navigation in editor (in preferences).
- New: Can now filter keys to show only missing translations.
- New (feature 1487280):  Added getResourceManager()
  to ResourceBundleEditor class.
- New: Added Hong Kong country flag.
- New (patch #1601774): Automatically changes fonts to display Asian
  (and other) characters properly.
- Fix (bug #1568674): creating a new locale file now throws proper exception
  when the file already exists (as opposed to overwriting content.
- Fix: (bug #1538787): Trailing whitespaces in values are not longer trimmed
  (leading spaces still are).
- Fix: Removing a key in a properties file no longer removes it from main
  key tree if the key exists in other files.

Release 0.7.5 (2006-04-22)
--------------------------
- Fix (bug #1455517): No more ArrayIndexOutOfBoundsException.
- Fix to work on Eclipse 3.2RC1.  Discussion at: