@@ -4,19 +4,19 @@ dialog.delete.body.multiple    = Sind Sie sicher, da\u00DF alle Schl\u00FCssel i
 dialog.delete.body.single      = Soll wirklich "{0}" gel\u00F6scht werden?
 dialog.delete.head.multiple    = L\u00F6sche Schl\u00FCsselgruppe
 dialog.delete.head.single      = L\u00F6sche Schl\u00FCssel
-dialog.duplicate.body.multiple = Schl\u00FCsselgruppe "{0}" kopieren nach (alle untergeordneten Schl\u00FCssel werden kopiert):
+dialog.duplicate.body.multiple = Schl\u00FCsselgruppe "{0}" (inkl. untergeordnete Schl\u00FCssel) kopieren nach:
 dialog.duplicate.body.single   = Kopiere "{0}" nach:
 dialog.duplicate.head.multiple = Kopiere Schl\u00FCsselgruppe
 dialog.duplicate.head.single   = Kopiere Schl\u00FCssel
-dialog.identical.body          = Nachfolgend sind Schl\u00FCssel, deren Werte beim Schl\u00FCssel "{0}" identisch sind, innerhalb der Lokale "{1}":
-dialog.identical.head          = Gleiche/r Wert/e gefunden.
+dialog.identical.body          = Die Werte folgender Schl\u00FCssel sind innerhalb der Lokalen "{1}" beim Schl\u00FCssel "{0}" identisch:
+dialog.identical.head          = Gleiche(r) Wert(e) gefunden.
 dialog.new.body                = Bitte geben Sie den Namen des neuen Schl\u00FCssels ein:
 dialog.new.head                = Schl\u00FCssel erzeugen
-dialog.rename.body.multiple    = Umbenennen der Schl\u00FCsselgruppe "{0}" nach (alle untergeordneten Schl\u00FCssel werden umbenannt):
-dialog.rename.body.single      = Umbennen "{0}" nach:
+dialog.rename.body.multiple    = Umbenennen der Schl\u00FCsselgruppe "{0}" (inkl. untergeordnete Schl\u00FCssel) nach:
+dialog.rename.body.single      = "{0}" umbennen nach:
 dialog.rename.head.multiple    = Umbenennen der Schl\u00FCsselgruppe
 dialog.rename.head.single      = Umbenennen von Schl\u00FCssel
-dialog.similar.body            = Nachfolgend sind Schl\u00FCssel, deren Werte beim Schl\u00FCssel "{0}" \u00E4hnlich sind, innerhalb der Lokale "{1}":
+dialog.similar.body            = Die Werte folgender Schl\u00FCssel sind innerhalb der Lokalen "{1}" beim Schl\u00FCssel "{0}" \u00E4hnlich:
 dialog.similar.head            = \u00C4hnliche Werte gefunden.
 
 editor.content.desc         = Editor f\u00FCr ResourceBundle:
@@ -25,14 +25,14 @@ editor.new.create           = Erstellen
 editor.new.tab              = Neu...
 editor.new.title            = Neue Dateieigenschaften
 editor.properties           = Eigenschaften
-editor.wiz.add              = Anf\u00FCgen -->
+editor.wiz.add              = Hinzuf\u00FCgen -->
 editor.wiz.browse           = Durchsuchen...
 editor.wiz.bundleName       = Basisname
 editor.wiz.creating         = Erstellen
-editor.wiz.desc             = Dieser Assistent erstellt eine Zusammenstellung neuer Dateien mit der *.properties-Endung. Diese k\u00F6nnen mit dem RessourceBundle Editor ge\u00F6ffnet werden.
-editor.wiz.error.bundleName = Der Basisname mu\u00DF bestimmt werden.
+editor.wiz.desc             = Dieser Assistent erstellt eine Zusammenstellung neuer Dateien mit der *.properties-Endung. Diese k\u00F6nnen mit dem ResourceBundle Editor ge\u00F6ffnet werden.
+editor.wiz.error.bundleName = Der Basisname muss angegeben werden.
 editor.wiz.error.container  = Der Dateien-Container mu\u00DF bestimmt werden.
-editor.wiz.error.extension  = Eine Endung kann nicht bestimmt werden. Dies erfolgt nun automatisch.
+editor.wiz.error.extension  = Keine Endung angegeben, wird automatisch erg\u00E4nzt.
 editor.wiz.folder           = Ordner
 editor.wiz.opening          = \u00D6ffne Properties-Dateien zur Bearbeitung...
 editor.wiz.remove           = <-- L\u00F6schen
@@ -47,27 +47,27 @@ error.newfile.cannotOpen   = Kann die neu angelegte Datei nicht \u00F6ffnen.
 error.seeLogs              = Siehe Log-Datei f\u00FCr Details.
 
 key.add               = &Anf\u00FCgen
-key.collapseAll       = Alle &falten
+key.collapseAll       = Alle &zusammenklappen
 key.comment           = Ko&mmentieren
 key.delete            = &L\u00F6schen
 key.duplicate         = Ko&pieren
-key.expandAll         = Alle &Entfalten
-key.filter.incomplete = [Show only incomplete translations.]
+key.expandAll         = Alle a&usklappen
+key.filter.incomplete = [Nur unvollst\u00E4ndige \u00DCbersetzungen anzeigen.]
 key.layout.flat       = Flach
 key.layout.tree       = Baum
 key.new               = Neu
 key.rename            = Umbenennen
 key.uncomment         = Ent&kommentieren
 
-prefs.alignEquals                     = Ausrichten gleicher Zeichen.
+prefs.alignEquals                     = Ausrichten an Gleichheitszeichen.
 prefs.convertEncoded                  = Umwandeln von \\uXXXX Werten in Unicode-Zeichen, wenn aus Properties-Datei gelesen wird.
 prefs.convertUnicode                  = Umwandeln Unicode-Wert nach \\uXXXX.
 prefs.convertUnicode.upper            = Nutze Gro\u00DFbuchstaben f\u00FCr hexadezimale Zeichen.
 prefs.fieldTabInserts                 = Die Tab-Taste f\u00FCgt einen Tab in die Lokalisierungstext ein.
-prefs.groupAlignEquals                = Ausrichten gleicher Zeichen innerhalb der Gruppen.
+prefs.groupAlignEquals                = Ausrichten innerhalb Gruppen am Gleichheitszeichen.
 prefs.groupKeys                       = Gruppenschl\u00FCssel.
 prefs.groupSep                        = Schl\u00FCsselgruppenseparator:
-prefs.keepEmptyFields                 = [Keep properties with empty values.]
+prefs.keepEmptyFields                 = Eintr\u00E4ge mit leeren Werten behalten.
 prefs.keyTree.expanded                = Schl\u00FCsselbaum standardm\u00E4\u00DFig expandiert \u00F6ffnen.
 prefs.keyTree.hierarchical            = Schl\u00FCsselbaum standardm\u00E4\u00DFig als Hierarchie \u00F6ffnen.
 prefs.levelDeep                       = Baumtiefe:
@@ -76,16 +76,16 @@ prefs.linesBetween                    = Anzahl der Zeilen zwischen den Gruppen:
 prefs.linesBetween.error              = Das "Anzahl der Zeilen zwischen den Gruppen"-Feld mu\u00DF numerisch sein.
 prefs.newline.force                   = Erzwingen einer neuen Zeile mit Escape-Sequenz:
 prefs.newline.nice                    = Zeilen nach Escape-Sequenzzeichen umbrechen.
-prefs.noTreeInEditor                  = [Don't display the key tree within the editor.]
+prefs.noTreeInEditor                  = Den Schl\u00FCsselbaum im Editor nicht anzeigen.
 prefs.perform.duplVals                = Zeige Schl\u00FCssel, die sich gleiche Inhalte/Werte innerhalb einer Lokale teilen.
-prefs.perform.intro1                  = Die nachfolgenden Funktionen k\u00F6nnen signifikanten Einflu\u00DF auf die Performance haben.
-prefs.perform.intro2                  = Speziell bei gro\u00DFen Dateien. Nutze sie bed\u00E4chtig.
+prefs.perform.intro1                  = Die nachfolgenden Funktionen k\u00F6nnen signifikanten Einflu\u00DF auf die Arbeitsgeschwindigkeit haben.
+prefs.perform.intro2                  = Insbesondere bei gro\u00DFen Dateien. Mit Bedacht verwenden.
 prefs.perform.missingVals             = Zeige Schl\u00FCssel mit einem oder mehr fehlenden Werten.
 prefs.perform.simVals                 = Zeige Schl\u00FCssel, die sich \u00E4hnliche Inhalte/Werte innerhalb einer Lokale teilen.
 prefs.perform.simVals.levensthein     = Nutze Levensthein Distanz.
 prefs.perform.simVals.precision       = Genauigkeitslevel (zw. 0 und 1):
 prefs.perform.simVals.precision.error = Der Genauigkeitslevel mu\u00DF zwischen 0 und 1 sein.
-prefs.perform.simVals.wordCount       = Nutze z\u00E4hlen von identischen Worten.
+prefs.perform.simVals.wordCount       = Nutze Anzahl identischer Worte.
 prefs.showGeneratedBy                 = Zeige "Erstellt von..." Kopfzeilenkommentar (Zeige Deine Unterst\u00FCtzung!)
 prefs.spacesAroundEquals              = Mindestens ein Leerzeichen links und rechts eines Gleichheitszeichens lassen.
 prefs.supportNL                       = Unterst\u00FCtzen der Eclipse "nl"-Struktur f\u00FCr PlugIn-Internationalisierung.
@@ -94,7 +94,7 @@ prefs.wrapIndent                      = Anzahl der Leerzeichen f\u00FCr die Einr
 prefs.wrapIndent.error                = Das "Anzahl der Leerzeichen f\u00FCr die Einr\u00FCckung"-Feld mu\u00DF numerisch sein.
 prefs.wrapLines                       = Lange Zeilen umbrechen.
 prefs.wrapLinesChar                   = Anzahl der Zeichen, nach denen die Zeile umgebrochen werden soll:
-prefs.wrapLinesChar.error             = Das "Anzahl der Zeichen, nach denen die Zeile...l"-Feld mu\u00DF numerisch sein.
+prefs.wrapLinesChar.error             = Das "Anzahl der Zeichen, nach denen die Zeile..."-Feld mu\u00DF numerisch sein.
 
 selector.country  = Land
 selector.language = Sprache
@@ -103,6 +103,6 @@ selector.variant  = Variante
 
 value.comment.tooltip   = Ausw\u00E4hlen, um Eintrag zu kommentieren.
 value.duplicate.tooltip = Doppelte Werte gefunden. Klicke f\u00FCr Details.
-value.goto.tooltip      = Klicke, um zur korrespondierenden Properties-Datei zu gelangen.
-value.similar.tooltip   = \u00E4hnliche Werte gefunden. Klicke f\u00FCr Details.
+value.goto.tooltip      = Klicken, um zur korrespondierenden Properties-Datei zu gelangen.
+value.similar.tooltip   = \u00C4hnliche Werte gefunden. Klicken f\u00FCr Details.
 value.uncomment.tooltip = Deselektieren, um bei diesem Eintrag die Kommentierung zu entfernen.
